placed text inside squares

--- a/Week-2/Assignment-2-HoverRotate.html
+++ b/Week-2/Assignment-2-HoverRotate.html
@@ -17,6 +17,9 @@
             <div class="dimension blue">
             </div>
         </div>
+        <div class="hi">
+            <h1> Hi! </h1>
+        </div>
         <div class="column2">
             <div class="dimension yellow">
             </div>
