--- a/Week-2/Assignment-2-loremform.html
+++ b/Week-2/Assignment-2-loremform.html
@@ -44,7 +44,35 @@
         
     </div>
     </div>
+    <form class="form">
+        <span> Title </span>
+        <input type="radio" name="title" value="Mr">
+        <label for="Mr"> Mr </label>
+        <input type="radio" name="title" value="Mrs">
+        <label for="Mrs"> Mrs </label>
+        <input type="radio" name="title" value="Miss">
+        <label for="Miss"> Miss </label><br>
+        <label for="fname"> First name: </label>
+        <input type="text" name="fname"><br>
+        <label for="lname"> Last name: </label>
+        <input type="text" name="lname"><br>
+        <label for="email"> Email: </label>
+        <input type="email" name="email"><br>
+        <label for="cell no."> Phone number: </label>
+        <input type="text" name="cell no."><br>
+        <label for="pwd"> Password: </label>
+        <input type="text" name="pwd"><br>
+        <label for="Cnf"> Confirm your Password: </label>
+        <input type="text" name="Cnf"><br>
+        <label for="cn"> Country </label>
+        <select name="country" id="country">
+            <option value="Canada">Canada</option>
+        </select><br>
+        <input type="checkbox" name="tnc" value="tnc">
+        <label for="tnc"> I agree to <a href="terms and condition">terms and condition</a></label><br>
+        <input type="submit" value="Signup">
 
+    </form>
 </body>
 
 </html>
