--- a/Week-1/Dashboard-assignment/Dashboard-assignment.html
+++ b/Week-1/Dashboard-assignment/Dashboard-assignment.html
@@ -35,11 +35,11 @@
             <div class="image-section">
                 <img class="img" src="2Eq--cattyboard.jpg" width="200" alt="image of 2Eq--cattyboard top 100 chart">
                 <div class="chart">
-                    <h2 style="color: white;" > Cattyboard Top 100 Single charts </h2>
+                    <h2 style="color: white;"> Cattyboard Top 100 Single charts </h2>
                     <p style="color: white;"> Unknown artist </p>
                 </div>
             </div>
-    
+
             <div class="playlist">
                 <table class="songs" style="width: 60%;">
                     <tr>
@@ -68,13 +68,15 @@
     </div>
 
     <footer class="footer">
-
-        <img class="footer-img" src="2Eq--cattyboard.jpg" alt="image of 2Eq--cattyboard top 100 chart" width="60">
+        <div class="footer-img">
+            <img class="footer-img" src="2Eq--cattyboard.jpg" alt="image of 2Eq--cattyboard top 100 chart" width="60">
+        </div>
         <div class="footer-icons ">
             <div class="las la-play" style="font-size: 20px;"></div>
             <div class="la-step-backward" style="font-size: 10px;"></div>
             <div class="la-step-forward" style="font-size: 10px;"></div>
         </div>
+
     </footer>
 
 </body>
